Limpezas e refatoracoes no frontend.